--- a/_config.yml
+++ b/_config.yml
@@ -22,12 +22,12 @@ bibtex_bibfiles:
 
 # Information about where the book exists on the web
 repository:
-  #url:   https://github.com/jteeriaho/raksa.git
+  url:   https://github.com/jteeriaho/raksa.git
 #  path_to_book:   # Optional path to your book, relative to the repository root
   branch: main    # Which branch of the repository should be used when creating links (optional)
 
 # Add GitHub buttons to your book
 # See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
-#html:
-#  use_issues_button: true
-#  use_repository_button: true
+html:
+  use_issues_button: true
+  use_repository_button: true
